toolchain/internal/core/analysis/testdata/errors/cycles/map_cycle.vdl
// @expect: E601
// @expect: E601
// Maps do NOT break type cycles - circular references are always forbidden

type Graph {
  name: string
  edges: map<Graph>
}

type Cache {
  data: string
  nested: map<Cache>
}
